--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>ProDeskIT – Slimme IT-oplossingen door Yannick Koenen</title>
+    <title>ProDesk IT – Slimme IT-oplossingen door Yannick Koenen</title>
     <meta
       name="description"
-      content="ProDeskIT helpt MKB en professionals met slimme, pragmatische IT-oplossingen, automatisering en AI-workflows. Opgericht door Yannick Koenen."
+      content="ProDesk IT helpt MKB en professionals met slimme, pragmatische IT-oplossingen, automatisering en AI-workflows. Opgericht door Yannick Koenen."
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,9 +20,12 @@
     <header class="site-header">
       <div class="container header-inner">
         <div class="brand">
-          <div class="brand-mark">P</div>
+          <div class="brand-mark">
+            <span class="brand-mark-main">PD</span>
+            <span class="brand-mark-sub">it</span>
+          </div>
           <div class="brand-text">
-            <span class="brand-name">ProDeskIT</span>
+            <span class="brand-name">ProDesk IT</span>
             <span class="brand-tagline">Slimme IT door Yannick Koenen</span>
           </div>
         </div>
@@ -56,7 +59,7 @@
               <span class="accent">zonder ruis</span>
             </h1>
             <p class="hero-lead">
-              ProDeskIT helpt je bedrijfsprocessen automatiseren, slimmer werken met
+              ProDesk IT helpt je bedrijfsprocessen automatiseren, slimmer werken met
               data en AI, en IT weer overzichtelijk maken. Gericht op het MKB en
               professionals die geen tijd hebben voor gedoe.
             </p>
@@ -79,8 +82,8 @@
               </div>
             </dl>
           </div>
-          <aside class="hero-panel" aria-label="Slimme ProDeskIT scan">
-            <h2>Snelle ProDeskIT-scan</h2>
+          <aside class="hero-panel" aria-label="Slimme ProDesk IT scan">
+            <h2>Snelle ProDesk IT-scan</h2>
             <p class="hero-panel-sub">
               Beantwoord 3 vragen en zie welk type oplossing het beste past.
             </p>
@@ -130,7 +133,7 @@
       <section id="services" class="section">
         <div class="container">
           <header class="section-header">
-            <h2>Diensten van ProDeskIT</h2>
+            <h2>Diensten van ProDesk IT</h2>
             <p>
               Yannick combineert hands-on IT-ervaring met een pragmatische blik op
               jouw business. Geen dikke rapporten, wel oplossingen die draaien.
@@ -181,7 +184,7 @@
         <div class="container smart-grid">
           <div>
             <header class="section-header align-left">
-              <h2>Wat maakt ProDeskIT “slim”?</h2>
+              <h2>Wat maakt ProDesk IT “slim”?</h2>
               <p>
                 Slim betekent niet “zo ingewikkeld mogelijk”. Het betekent: de
                 juiste dingen automatiseren en de rest eenvoudig houden.
@@ -214,7 +217,7 @@
           <aside class="smart-aside">
             <h3>Over Yannick Koenen</h3>
             <p>
-              Yannick is de oprichter van ProDeskIT en helpt organisaties hun IT
+              Yannick is de oprichter van ProDesk IT en helpt organisaties hun IT
               weer in lijn te brengen met hoe ze écht willen werken.
             </p>
             <p>
@@ -386,7 +389,7 @@
     >
       <div class="flappy-inner">
         <header class="flappy-header">
-          <h2>ProDeskIT Flappy Bird</h2>
+          <h2>ProDesk IT Flappy Bird</h2>
           <button
             type="button"
             class="flappy-close"
@@ -416,7 +419,7 @@
 
     <footer class="site-footer">
       <div class="container footer-inner">
-        <p>&copy; <span id="year"></span> ProDeskIT – Yannick Koenen</p>
+        <p>&copy; <span id="year"></span> ProDesk IT – Yannick Koenen</p>
         <p class="footer-meta">
           Gemaakt met oog voor eenvoud, snelheid en privacy.
         </p>
