--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
               <span class="accent">zonder ruis</span>
             </h1>
             <p class="hero-lead">
-              ProDesk IT helpt je bedrijfsprocessen automatiseren, slimmer werken met
-              data en AI, en IT weer overzichtelijk maken. Gericht op het MKB en
-              professionals die geen tijd hebben voor gedoe.
+              ProDesk IT helpt je met moderne, snelle websites en het op afstand
+              ondersteunen van gebruikers. Gericht op het MKB en professionals die
+              geen tijd hebben voor gedoe.
             </p>
             <div class="hero-actions">
               <a href="#contact" class="btn btn-primary">Plan een kennismaking</a>
@@ -135,8 +135,9 @@
           <header class="section-header">
             <h2>Diensten van ProDesk IT</h2>
             <p>
-              Yannick combineert hands-on IT-ervaring met een pragmatische blik op
-              jouw business. Geen dikke rapporten, wel oplossingen die draaien.
+              Op dit moment focust ProDesk IT zich vooral op het bouwen van websites
+              en het op afstand helpen van gebruikers. Yannick combineert hands-on
+              IT-ervaring met een pragmatische blik op jouw business.
             </p>
           </header>
           <div class="grid services-grid">
