--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
             <span></span><span></span>
           </button>
           <ul class="nav-links">
-            <li><a href="#services">Diensten</a></li>
-            <li><a href="#support">Support</a></li>
-            <li><a href="#smart">Slimme aanpak</a></li>
-            <li><a href="#cases">Cases</a></li>
+            <li><a href="diensten.html">Diensten</a></li>
+            <li><a href="support.html">Support</a></li>
+            <li><a href="slimme-aanpak.html">Slimme aanpak</a></li>
+            <li><a href="cases.html">Cases</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
-          <a href="#support" class="btn btn-secondary btn-small nav-support"
+          <a href="support.html" class="btn btn-primary btn-small nav-support"
             >Support</a
           >
           <button id="theme-toggle" class="theme-toggle" aria-label="Schakel thema">
